--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -1,24 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: url(https://i.pinimg.com/originals/fc/a3/3f/fca33f325c82e5d9faa4d85913028b1d.jpg);*/
   background: url("../img/fondo.jpg");
   background-color:black;
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
-
-/*code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-  color: white;
-}*/
 
 h1{
   font-size: 25px;
@@ -38,7 +26,6 @@ h1{
 
 .breakfast {
   display: flex;
-  /*flex-flow: row wrap;*/
   justify-content: center;
   background: rgba(0, 0, 0, 0.45);
   border-radius: 20px;
@@ -82,9 +69,9 @@ h3 {
   background: #E1B589;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
-  margin: 65px;
-  margin-left: 0px;
-  height:auto;
+  margin:12px;
+  margin-top:20px;
+  height:728px;
   width: 50%;
 }
 
@@ -128,7 +115,7 @@ margin:2px;
 
 .containerRight{
   width: 50%;
-  margin-left: 0px;
+  margin:20px;
 }
 
 h1{
