--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,12 +6,18 @@ body {
   background-size: 100%;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
+  align-self: auto;
 }
 
 h1 {
   font-size: 25px;
   color: white;
   margin: 15px 20px 2px 20px;
+}
+
+p{
+  color:white;
 }
 
 .contenedorGeneral {
@@ -80,6 +86,12 @@ h3 {
   margin: 20px;
 }
 
+.btnEnviar{
+display: flex;
+justify-content: flex-end;
+margin:10px;
+}
+
 .comida {
   text-align: center;
   margin: 10px;
@@ -90,16 +102,23 @@ h3 {
   margin: 10px;
 }
 
+.row input{
+  background-color:gray;
+  border: none;
+  text-decoration-color: honeydew;
+}
+
 .contenedorRegistro input {
   width: 350px;
 }
-
 
 @media screen and (max-width: 768px) {
 
   .comida {
     text-align: center;
     margin: 2px;
+    width: 150px;
+    height: 170px;
   }
 
   .comida p {
