--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   align-self: auto;
+  font-family: 'Cabin', sans-serif;
 }
 
 h1 {
@@ -71,7 +72,7 @@ h3 {
 }
 
 .contenedorDerecho {
-  background: #E1B589;
+  background: rgb(34, 34, 34);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   margin: 12px;
@@ -103,14 +104,34 @@ margin:10px;
 }
 
 .row input{
-  background-color:gray;
   border: none;
-  text-decoration-color: honeydew;
 }
 
 .contenedorRegistro input {
   width: 350px;
 }
+
+.contenedorDerecho h3{
+  color:grey;
+  font-size: 30px;
+}
+.pedido{
+  color:grey;
+  font-style: black;
+  font-size:18px;
+}
+
+.btnMenu{
+  display:flex;
+  flex-direction: row;
+  margin:10px;
+  text-decoration: none;
+}
+
+.col{
+  margin-left: 20px;
+}
+
 
 @media screen and (max-width: 768px) {
 
@@ -147,6 +168,6 @@ margin:10px;
   }
 
   .contenedorDerecho h3 {
-    font-size: 18px;
+    font-size: 20px;
   }
 }
