--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 p{
-  color:white;
+  color:grey;
 }
 
 .contenedorGeneral {
@@ -80,10 +80,11 @@ h3 {
   width: 50%;
 }
 
-.contenedorDerecho h3 {
-  color: rgb(32, 32, 32);
+.contenedorDerecho h3{
+  color:white;
+  font-size: 30px;
   text-align: center;
-  margin: 20px;
+  margin:20px;
 }
 
 .btnEnviar{
@@ -110,10 +111,6 @@ margin:10px;
   width: 350px;
 }
 
-.contenedorDerecho h3{
-  color:grey;
-  font-size: 30px;
-}
 .pedido{
   color:grey;
   font-style: black;
@@ -160,12 +157,16 @@ margin:10px;
     margin: 20px;
   }
 
+  .contenedorDerecho h3 {
+    font-size: 22px;
+  }
+
+  .contenedorDerecho p{
+    margin-left: 20px;
+  }
   h1 {
     font-size: 20px;
     margin: 10px 20px;
   }
 
-  .contenedorDerecho h3 {
-    font-size: 20px;
-  }
 }
