--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,8 +17,8 @@ h1 {
   margin: 15px 20px 2px 20px;
 }
 
-p{
-  color:grey;
+p {
+  color: grey;
 }
 
 .contenedorGeneral {
@@ -80,17 +80,17 @@ h3 {
   width: 50%;
 }
 
-.contenedorDerecho h3{
-  color:white;
+.contenedorDerecho h3 {
+  color: white;
   font-size: 30px;
   text-align: center;
-  margin:20px;
+  margin: 20px;
 }
 
-.btnEnviar{
-display: flex;
-justify-content: flex-end;
-margin:10px;
+.btnEnviar {
+  display: flex;
+  justify-content: flex-end;
+  margin: 10px;
 }
 
 .comida {
@@ -103,7 +103,7 @@ margin:10px;
   margin: 10px;
 }
 
-.row input{
+.row input {
   border: none;
 }
 
@@ -111,22 +111,27 @@ margin:10px;
   width: 350px;
 }
 
-.pedido{
-  color:grey;
+.pedido {
+  color: grey;
   font-style: black;
-  font-size:18px;
+  font-size: 18px;
 }
 
-.btnMenu{
-  display:flex;
+.btnMenu {
+  display: flex;
   flex-direction: row;
-  margin:10px;
+  margin: 10px;
   text-decoration: none;
 }
 
-.col{
+.col {
   margin-left: 20px;
 }
+
+.container.mt-2 {
+  padding-left: 0px;
+}
+
 
 @media screen and (max-width: 768px) {
 
@@ -161,9 +166,10 @@ margin:10px;
     font-size: 22px;
   }
 
-  .contenedorDerecho p{
+  .contenedorDerecho p {
     margin-left: 20px;
   }
+
   h1 {
     font-size: 20px;
     margin: 10px 20px;
