--- a/src/css/cocina.css
+++ b/src/css/cocina.css
@@ -17,7 +17,7 @@
 }
 
 .contenedorLista span {
-  margin-top:10px;
+  margin-top: 10px;
   color: white;
   font-size: 15px;
 }
@@ -32,4 +32,23 @@
   margin-left: 80%;
   background-color: #4D5A06;
   border-style: none;
+}
+
+.contenedorLista .btn.btn-primary.btn-sm {
+  margin-left: 75%;
+  color: white;
+  background-color: #063b5a;
+  border-style: none;
+}
+
+.contenedorListaDerecho {
+  width: 280px;
+  padding: 15px;
+  height: auto;
+  background: rgb(23, 23, 24);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin: 10px;
+  margin-left: 0px;
+  border-radius: 10px;
+  list-style: none;
 }
