--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,8 +76,14 @@ h3 {
   border-radius: 20px;
   margin: 12px;
   margin-top: 20px;
-  height: 728px;
+  height: auto;
   width: 50%;
+}
+
+.contenedorDerecho h6 {
+  margin-left: 90px;
+  font-size: 20px;
+  color: grey;
 }
 
 .contenedorDerecho h3 {
@@ -126,6 +132,7 @@ h3 {
 
 .col {
   margin-left: 20px;
+  padding: 0px;
 }
 
 .container.mt-2 {
@@ -160,6 +167,7 @@ h3 {
   .contenedorDerecho {
     width: 50%;
     margin: 20px;
+    height: auto;
   }
 
   .contenedorDerecho h3 {
@@ -168,6 +176,12 @@ h3 {
 
   .contenedorDerecho p {
     margin-left: 20px;
+    font-size: 16px;
+  }
+
+  .contenedorDerecho h6 {
+    margin-left: 40px;
+    color: grey;
   }
 
   h1 {
