--- a/src/css/cocina.css
+++ b/src/css/cocina.css
@@ -22,8 +22,12 @@
   font-size: 15px;
 }
 
+.contenedorLista li{
+  font-size: 16px;
+}
+
 .contenedorCocina p {
-  margin-top: 15px;
+  margin-top: 8px;
   margin-bottom: 5px;
   font-size: 18px;
 }
