--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 p {
-  color: grey;
+  color: white;
 }
 
 .contenedorGeneral {
@@ -70,6 +70,10 @@ h3 {
   color: white;
 }
 
+h5{
+  text-decoration: underline;
+  color:white;
+}
 .contenedorDerecho {
   background: rgb(34, 34, 34);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
